// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Omnitracking track events definitions \`Address Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 12345678,
  "checkoutStep": 1,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "orderCode": "50314b8e9bcf000000000000",
  "tid": 2911,
}
`;

exports[`Omnitracking track events definitions \`Billing Info Added\` return should match the snapshot 1`] = `
Object {
  "addressFinder": false,
  "basketCurrency": "USD",
  "basketValue": 24.64,
  "checkoutOrderId": 12345678,
  "checkoutStep": "1",
  "orderCode": "50314b8e9bcf000000000000",
  "promocode": "ACME2019",
  "tid": 3647,
}
`;

exports[`Omnitracking track events definitions \`Checkout Abandoned\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 12345678,
  "checkoutStep": 2,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\",\\"packagingType\\":\\"foo\\"}",
  "orderCode": "50314b8e9bcf000000000000",
  "orderVAT": 2.04,
  "paymentType": "credit",
  "shipping": 10,
  "tid": 2084,
}
`;

exports[`Omnitracking track events definitions \`Checkout Started\` return should match the snapshot 1`] = `
Object {
  "basketCurrency": "USD",
  "basketValue": 24.64,
  "checkoutOrderId": 12345678,
  "checkoutStep": 1,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/standard\\",\\"courierType\\":\\"Next Day\\"}",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "loginType": "guest",
  "orderCode": "50314b8e9bcf000000000000",
  "orderVAT": 2.04,
  "paymentType": "credit card",
  "shipping": 3.6,
  "tid": 2918,
}
`;

exports[`Omnitracking track events definitions \`Checkout Step Editing\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 12345678,
  "checkoutStep": 1,
  "orderCode": "50314b8e9bcf000000000000",
  "tid": 2923,
}
`;

exports[`Omnitracking track events definitions \`Delivery Method Added\` return should match the snapshot 1`] = `
Object {
  "basketCurrency": "USD",
  "basketValue": 24.64,
  "checkoutOrderId": 12345678,
  "checkoutStep": 2,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\",\\"packagingType\\":\\"foo\\"}",
  "interactionType": "click",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "orderCode": "50314b8e9bcf000000000000",
  "promoCode": "ACME2019",
  "selectedPaymentMethod": "credit",
  "tid": 3654,
}
`;

exports[`Omnitracking track events definitions \`Filters Applied\` return should match the snapshot 1`] = `
Object {
  "filtersApplied": "{\\"brands\\":[2765,4062],\\"categories\\":[135973],\\"colors\\":[1],\\"discount\\":[0],\\"gender\\":[0],\\"price\\":[0,1950],\\"sizes\\":[16]}",
  "tid": 2917,
}
`;

exports[`Omnitracking track events definitions \`Filters Cleared\` return should match the snapshot 1`] = `
Object {
  "filtersApplied": "{\\"brands\\":[2765,4062],\\"categories\\":[135973],\\"colors\\":[1],\\"discount\\":[0],\\"gender\\":[0],\\"price\\":[0,1950],\\"sizes\\":[16]}",
  "tid": 2921,
}
`;

exports[`Omnitracking track events definitions \`Interact Content\` return should match the snapshot 1`] = `
Object {
  "actionArea": "dummy",
  "contentType": "biz",
  "interactionType": "Click",
  "tid": 2882,
  "val": "507f1f77bcf86cd799439011",
}
`;

exports[`Omnitracking track events definitions \`Login\` return should match the snapshot 1`] = `
Object {
  "loginType": "Acme",
  "tid": 2924,
}
`;

exports[`Omnitracking track events definitions \`Logout\` return should match the snapshot 1`] = `
Object {
  "tid": 431,
}
`;

exports[`Omnitracking track events definitions \`Order Completed\` return should match the snapshot 1`] = `
Object {
  "addressFinder": false,
  "checkoutOrderId": 21312312,
  "checkoutStep": 5,
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\",\\"packagingType\\":\\"foo\\"}",
  "orderCode": "ABC12",
  "paymentType": "credit card",
  "tid": 2831,
}
`;

exports[`Omnitracking track events definitions \`Payment Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": undefined,
  "deliveryInformationDetails": undefined,
  "interactionType": undefined,
  "selectedPaymentMethod": "credit card",
  "tid": 2912,
}
`;

exports[`Omnitracking track events definitions \`Place Order Started\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 15338048,
  "orderCode": "50314b8e9bcf000000000000",
  "promocode": "ACME2019",
  "shippingTotalValue": 3.6,
  "tid": 188,
}
`;

exports[`Omnitracking track events definitions \`Product Added to Cart\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Wishlist",
  "itemListName": "my_wishlist",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1,\\"listIndex\\":2}]",
  "moduleId": "d3618128-5aa9-4caa-a452-1dd1377a6190",
  "priceCurrency": "USD",
  "tid": 2915,
}
`;

exports[`Omnitracking track events definitions \`Product Added to Wishlist\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Plp",
  "itemListName": "Woman shopping",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1,\\"listIndex\\":2}]",
  "moduleId": "/en-pt/shopping/woman",
  "priceCurrency": "USD",
  "tid": 2916,
  "wishlistId": "d3618128-5aa9-4caa-a452-1dd1377a6190",
}
`;

exports[`Omnitracking track events definitions \`Product Clicked\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Plp",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1,\\"listIndex\\":3}]",
  "productId": "507f1f77bcf86cd799439011",
  "tid": 2926,
}
`;

exports[`Omnitracking track events definitions \`Product List Viewed\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Plp",
  "itemListName": "Woman shopping",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"category\\":\\"\\",\\"itemFullPrice\\":25,\\"listIndex\\":2},{\\"productId\\":\\"507f1f77bcf86cd799439012\\",\\"itemPromotion\\":6,\\"category\\":\\"\\",\\"itemFullPrice\\":25,\\"listIndex\\":3}]",
  "moduleId": "d3618128-5aa9-4caa-a452-1dd1377a6190",
  "tid": 2832,
}
`;

exports[`Omnitracking track events definitions \`Product Removed From Wishlist\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Plp",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1,\\"listIndex\\":2}]",
  "priceCurrency": "USD",
  "tid": 2925,
  "wishlistId": "d3618128-5aa9-4caa-a452-1dd1377a6190",
}
`;

exports[`Omnitracking track events definitions \`Product Removed from Cart\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Bag",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1,\\"listIndex\\":1}]",
  "priceCurrency": "USD",
  "tid": 131,
}
`;

exports[`Omnitracking track events definitions \`Product Updated\` return should match the snapshot 1`] = `
Array [
  Object {
    "actionArea": "Bag",
    "colourList": "2, 1",
    "listIndex": 1,
    "productId": "507f1f77bcf86cd799439011",
    "storeID": "123",
    "tid": 2098,
  },
  Object {
    "actionArea": "Bag",
    "listIndex": 1,
    "productId": "507f1f77bcf86cd799439011",
    "scaleList": "10, 12",
    "sizeList": "11, 10",
    "storeID": "123",
    "tid": 2920,
  },
  Object {
    "actionArea": "Bag",
    "itemQuantity": 1,
    "listIndex": 1,
    "productId": "507f1f77bcf86cd799439011",
    "storeID": "123",
    "tid": 2919,
  },
]
`;

exports[`Omnitracking track events definitions \`Promocode Applied\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 15338048,
  "errorMessage": "No promocode available.",
  "hasError": true,
  "orderCode": "50314b8e9bcf000000000000",
  "promoCode": "ACME2019",
  "tid": 311,
}
`;

exports[`Omnitracking track events definitions \`Select Content\` return should match the snapshot 1`] = `
Object {
  "contentType": "biz",
  "interactionType": "click",
  "productId": 12345,
  "tid": 2895,
  "val": 12312312,
}
`;

exports[`Omnitracking track events definitions \`Share\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Pdp",
  "productId": "123456",
  "tid": 1205,
}
`;

exports[`Omnitracking track events definitions \`Shipping Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 15338048,
  "checkoutStep": "2",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "orderCode": "50314b8e9bcf000000000000",
  "selectedPaymentMethod": "credit",
  "tid": 2914,
}
`;

exports[`Omnitracking track events definitions \`Shipping Method Added\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 15338048,
  "checkoutStep": "2",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "orderCode": "50314b8e9bcf000000000000",
  "selectedPaymentMethod": "credit",
  "tid": 2913,
}
`;

exports[`Omnitracking track events definitions \`Sign-up Form Completed\` return should match the snapshot 1`] = `
Object {
  "loginType": "Acme",
  "tid": 2927,
}
`;

exports[`Omnitracking track events definitions \`Sign-up Newsletter\` return should match the snapshot 1`] = `
Object {
  "gender": "Woman",
  "tid": 1040,
}
`;

exports[`Omnitracking track events definitions \`bag\` return should match the snapshot 1`] = `
Object {
  "basketQuantity": 1,
  "basketValue": 13,
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "viewSubType": "Bag",
  "viewType": "Shopping Bag",
}
`;

exports[`Omnitracking track events definitions \`checkout\` return should match the snapshot 1`] = `
Object {
  "checkoutOrderId": 12345678,
  "orderCode": "ASH12",
  "orderValue": 100,
  "shippingTotalValue": 10,
  "viewSubType": "Checkout SPA",
  "viewType": "Checkout SPA",
}
`;

exports[`Omnitracking track events definitions \`pageDefinitions\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingID",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "applePayStatus",
    "availablePaymentOptions",
    "checkoutOrderId",
    "checkoutStep",
    "defaultPaymentMethod",
    "isShippingAddressClickAndCollect",
    "orderCode",
    "orderCurrency",
    "orderId",
    "orderValue",
    "orderVAT",
    "productCount",
    "promoCode",
    "saleProductCount",
    "selectableFieldsList",
    "shippingTotalValue",
    "shippingTypeFee",
    "userCheckoutType",
  ],
  "GenericPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingID",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "attributesList",
    "categoryList",
    "colourList",
    "deliveryOptions",
    "deliveryOptionsDetails",
    "designerList",
    "discount",
    "filtersApplied",
    "filterType",
    "interactionType",
    "marketType",
    "orderSummary",
    "pageNumber",
    "priceFilter",
    "returnId",
    "scaleList",
    "selectableFieldsList",
    "selectedOrderType",
    "sizeList",
    "orderDetails",
    "orderList",
    "paymentStatus",
    "shippingTotalValue",
    "shippingTypeFee",
    "tagSkuList",
    "productId",
  ],
  "ListingPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingID",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "categoryId",
    "collectionId",
    "designerId",
    "designerName",
    "didYouMean",
    "itemRankTypeList",
    "outfitId",
    "promotionId",
    "recsType",
    "saleType",
    "seasonId",
    "setId",
    "skuItemsListWithSimilar",
    "sortOption",
  ],
  "ProductPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketId",
    "basketQuantity",
    "categoryIdList",
    "checkboxFilter",
    "clientAdvertisingID",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "isBot",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "quantityList",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "stylistId",
    "suggestionType",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "analyticsPackageVersion",
    "appointmentDetails",
    "basketCurrency",
    "basketValue",
    "bookmarkId",
    "bookmarkItemList",
    "boostRanking",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientCountry",
    "clientTimestamp",
    "clientVersion",
    "department",
    "dismiss",
    "dropDownListOptions",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "geoLocation",
    "hasError",
    "hasNewMessages",
    "inputType",
    "integrationId",
    "ip",
    "isCustomer",
    "isMainWishlist",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "lineItems",
    "listIndex",
    "loginType",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "promotionValue",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "searchResultCount",
    "selectedPaymentMethod",
    "shipmentIndex",
    "shipmentQuantity",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "submittedQuery",
    "subscriptionId",
    "tagList",
    "taskManager",
    "uniqueViewId",
    "userAgent",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "variantId",
    "applePayStatus",
    "categoryId",
    "collectionId",
    "complementaryLookType",
    "designerId",
    "designerName",
    "hasVto",
    "itemColourId",
    "lookId",
    "numberOfColours",
    "numberOfSizes",
    "numberOfSizesInStore",
    "outfitId",
    "rankType",
    "reviews",
    "seasonId",
    "totalStock",
    "totalStockInStore",
    "unitFullPrice",
    "unitSalePrice",
    "productId",
  ],
}
`;

exports[`Omnitracking track events definitions \`pageEventsFilter\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "checkout",
    "checkout-delivery-method",
    "checkout-payment",
    "checkout-review",
    "checkout-shipping",
    "Checkout",
    "confirm",
    "payment",
  ],
  "ListingPageVisited": Array [
    "product-listing",
    "search",
    "ProductList",
    "listing",
    "search",
    "sets",
  ],
  "ProductPageVisited": Array [
    "product-details",
    "ProductDetail",
    "product",
  ],
}
`;

exports[`Omnitracking track events definitions \`product-details\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":\\"12122479\\",\\"itemPromotion\\":1,\\"designerName\\":\\"Saint Laurent\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":2,\\"sizeID\\":\\"20\\",\\"itemQuantity\\":13,\\"promoCode\\":\\"EASTER2022\\",\\"storeID\\":20000}]",
  "recommendationsSource": "{\\"recommendationsModuleName\\":\\"Recommendations\\",\\"recommendationsId\\":\\"5c1e447a-b14b-43a5-b010-2190f3366fad\\",\\"recommendationsPosition\\":1,\\"recommendationsStrategy\\":\\"rec_123\\"}",
  "viewSubType": "Product",
  "viewType": "Product",
}
`;

exports[`Omnitracking track events definitions \`product-listing\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":\\"12345678\\",\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1}]",
  "viewSubType": "Listing",
  "viewType": "Listing",
}
`;

exports[`Omnitracking track events definitions \`trackDefinitions\` should match snapshot 1`] = `
Array [
  "categoryId",
  "checkoutOrderId",
  "contentProvider",
  "contentType",
  "countPromoProducts",
  "countSaleProducts",
  "deeplinkSource",
  "deliveryInformationDetails",
  "designerId",
  "designerName",
  "dropDownListSelection",
  "filterArea",
  "filtersAutoAppliedSource",
  "filtersAvailable",
  "filtersCoordinates",
  "filtersIsVisible",
  "fittingRoomQuantity",
  "imageNumber",
  "isFixedMerchant",
  "itemColourId",
  "itemCoordinates",
  "itemListName",
  "itemQuantity",
  "itemSize",
  "loadItemCoordinate",
  "moduleBenefit",
  "moduleContentDepartment",
  "moduleContentID",
  "moduleContentName",
  "moduleContentPublicationDate",
  "moduleContentVersion",
  "moduleId",
  "moduleLoadTime",
  "modulePublicationDate",
  "moduleState",
  "moduleType",
  "moduleVersion",
  "moduleWasInteracted",
  "moduleWasSeen",
  "numberOfColours",
  "orderCode",
  "orderCodeId",
  "orderValue",
  "orderVAT",
  "partnersSubscriptionList",
  "productCount",
  "productPackagingOptions",
  "promoCode",
  "promotionDetails",
  "provider",
  "recommendationsId",
  "recommendationsModuleName",
  "recommendationsProductList",
  "recommendationsStrategy",
  "recsLoaded",
  "recsRequested",
  "recsStrategy",
  "recsType",
  "refundInformationDetails",
  "shippingTotalValue",
  "slotIndex",
  "sortOption",
  "sourceDescription",
  "sourceGroupDescription",
  "sourceId",
  "sourceType",
  "sourceWasSeen",
  "targetId",
  "targetType",
  "totalOriginalAmount",
  "totalSaleDiscount",
  "totalStock",
  "totalStockInStore",
  "unitFullPrice",
  "unitSalePrice",
  "wishlistId",
  "productId",
  "accessTier",
  "actionArea",
  "advertisingConsent",
  "analyticsPackageVersion",
  "appointmentDetails",
  "basketCurrency",
  "basketValue",
  "bookmarkId",
  "bookmarkItemList",
  "boostRanking",
  "bundleAttributes",
  "bundleId",
  "categoryName",
  "clientCountry",
  "clientTimestamp",
  "clientVersion",
  "department",
  "dismiss",
  "dropDownListOptions",
  "errorMessage",
  "fittingRoomName",
  "functionalConsent",
  "geoLocation",
  "hasError",
  "hasNewMessages",
  "inputType",
  "integrationId",
  "ip",
  "isCustomer",
  "isMainWishlist",
  "itemPriceList",
  "itemSalePriceList",
  "itemStockList",
  "itemStoreList",
  "lineItems",
  "listIndex",
  "loginType",
  "merchantLocationId",
  "messageComponentsList",
  "messageId",
  "messageNumber",
  "partnerDocuments",
  "performanceConsent",
  "promotionValue",
  "pushPayload",
  "requestId",
  "requestStatus",
  "scrollDepth",
  "searchQuery",
  "searchResultCount",
  "selectedPaymentMethod",
  "shipmentIndex",
  "shipmentQuantity",
  "skuItemList",
  "status",
  "storeConnections",
  "storeId",
  "submittedQuery",
  "subscriptionId",
  "tagList",
  "taskManager",
  "uniqueViewId",
  "userAgent",
  "utmCampaign",
  "utmContent",
  "utmMedium",
  "utmSource",
  "utmTerm",
  "uuid",
  "variantId",
  "attributesList",
  "categoryList",
  "colourList",
  "deliveryOptions",
  "deliveryOptionsDetails",
  "designerList",
  "discount",
  "filtersApplied",
  "filterType",
  "interactionType",
  "marketType",
  "orderSummary",
  "pageNumber",
  "priceFilter",
  "returnId",
  "scaleList",
  "selectableFieldsList",
  "selectedOrderType",
  "sizeList",
  "val",
  "tid",
]
`;

exports[`Omnitracking track events definitions \`wishlist\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":\\"12122479\\",\\"itemPromotion\\":1,\\"designerName\\":\\"Saint Laurent\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":2,\\"sizeID\\":\\"20\\",\\"itemQuantity\\":13,\\"promoCode\\":\\"EASTER2022\\",\\"storeID\\":20000,\\"listIndex\\":1},{\\"productId\\":\\"12122479\\",\\"itemPromotion\\":1,\\"designerName\\":\\"Saint Laurent\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":2,\\"sizeID\\":\\"21\\",\\"itemQuantity\\":13,\\"promoCode\\":\\"EASTER2022\\",\\"storeID\\":20000,\\"listIndex\\":1}]",
  "viewSubType": "Wishlist",
  "viewType": "Wishlist",
  "wishlistQuantity": 26,
}
`;
